# event-discord-bot

./: .gitignore  EventBot.py  README.md  requirements.txt  setup.cfg
src/: EventBotStarter.py
src/EventBot/: __init__.py  __main__.py  bot.py  config.py  objects.py
src/EventBot/ext/EventManager/: BotAdministration.py  GameMastering.py  PlannerManager.py  ReactionsManager.py  __init__.py  errors.py  helpers.py
