[metadata]
name = DiscordEventBot
version = 1.2.1
author = Remi BONNET
author_email = prog.bontiv@gmail.com
description = A bot for managing event in Discord
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bontiv/event-discord-bot
project_urls =
    Bug Tracker = https://github.com/bontiv/event-discord-bot/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = Discord

[options]
package_dir =
    =src
packages =
  EventBot
  EventBot.ext.EventManager

python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    discord.py
    tabulate
    appdirs

[options.entry_points]
console_scripts =
    discordeventbot = EventBot.__main__:main_run
